# GAVELbench

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
config/: data_sources.json
data/: kategorier_mapping.json
data/results/: evaluation_report.json  evaluation_report_scores_per_overkategori.json
guides/: ansvarlig-ki-benchmarker.md  kilderegister-benchmarker.md
quarto/: _quarto.yml  index.qmd  per_kategori.qmd
scripts/: list_available_models.py  upload_data.py
src/: config.yml  create_leaderboard.py  evaluate.py  evaluate_judge.py  fetch_data.py  gen_answers_from_llm.py  generate.py  load_data_from_BQ.py  main.py  models.py  models.yaml  report.py  storage.py  test_gemini_access.py
src/eval_judge/: DataFetcher.py  DataManager.py  __init__.py  claim_decom_fc_bidirectional.py
src/utils/: get_kunnskapsbank_data.py
tests/: __init__.py  test_api_access.py  test_bucket_access.py  test_sampling.py
